--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <div class="container">
+      <div class="input-constainer">
+        <div class="input-city">
+          <input type="text" name="" id="" placeholder="Type your City here:" />
+        </div>
+        <div class="input-data">
+          <select name="" id="selector">
+            <option value="">-- PICK ONE --</option>
+            <option value="">Temperature</option>
+            <option value="">Conditions</option>
+            <option value="">Humidity</option>
+          </select>
+        </div>
+      </div>
+      <div class="result"></div>
+    </div>
   </head>
   <body></body>
 </html>
