--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <option value="">Humidity</option>
           </select>
         </div>
+        <div class="btn">
+          <button>Get Data</button>
+        </div>
       </div>
       <div class="result"></div>
     </div>
