--- a/index.html
+++ b/index.html
@@ -4,26 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
+  </head>
+  <body>
     <div class="container">
-      <div class="input-constainer">
-        <div class="input-city">
-          <input type="text" name="" id="" placeholder="Type your City here:" />
+      <div class="input-container">
+        <div class="input">
+          <div class="inp-city">
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Type your City here:"
+            />
+          </div>
+          <div class="select-cond">
+            <select name="" id="selector">
+              <option value="">-- PICK ONE --</option>
+              <option value="">Temperature</option>
+              <option value="">Conditions</option>
+              <option value="">Humidity</option>
+            </select>
+          </div>
         </div>
-        <div class="input-data">
-          <select name="" id="selector">
-            <option value="">-- PICK ONE --</option>
-            <option value="">Temperature</option>
-            <option value="">Conditions</option>
-            <option value="">Humidity</option>
-          </select>
-        </div>
-        <div class="btn">
-          <button>Get Data</button>
-        </div>
+      </div>
+      <div class="btn">
+        <button>Get Data</button>
       </div>
       <div class="result"></div>
     </div>
-  </head>
-  <body></body>
+  </body>
 </html>
