--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input
               type="text"
               name=""
-              id=""
+              id="city"
               placeholder="Type your City here:"
             />
           </div>
