--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
     <title>Document</title>
   </head>
   <body>
@@ -29,10 +30,10 @@
           </div>
         </div>
       </div>
-      <div class="btn">
+      <div id="btn">
         <button>Get Data</button>
       </div>
-      <div class="result"></div>
+      <div id="rezult" class="result"></div>
     </div>
   </body>
 </html>
