--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <div class="select-cond">
             <select name="" id="selector">
               <option value="">-- PICK ONE --</option>
-              <option value="">Temperature</option>
-              <option value="">Conditions</option>
-              <option value="">Humidity</option>
+              <option value="temperature">Temperature</option>
+              <option value="conditions">Conditions</option>
+              <option value="humidity">Humidity</option>
             </select>
           </div>
         </div>
