--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
           </div>
         </div>
       </div>
-      <div id="btn">
-        <button>Get Data</button>
+      <div class="content">
+        <div id="btn">
+          <button>Get Data</button>
+        </div>
+        <div id="rezult" class="result"></div>
       </div>
-      <div id="rezult" class="result"></div>
     </div>
   </body>
 </html>
