--- a/index.html
+++ b/index.html
@@ -23,17 +23,16 @@
           <div class="select-cond">
             <select name="" id="selector">
               <option value="">-- PICK ONE --</option>
-              <option value="temperature">Temperature</option>
-              <option value="conditions">Conditions</option>
-              <option value="humidity">Humidity</option>
+              <option value="tem">Temperature</option>
+              <option value="con">Conditions</option>
+              <option value="hum">Humidity</option>
             </select>
           </div>
         </div>
       </div>
       <div class="content">
-        <div id="btn">
-          <button>Get Data</button>
-        </div>
+        <button id="btn">Get Data</button>
+
         <div id="rezult" class="result"></div>
       </div>
     </div>
